# trabalho_cg

./: CMakeLists.txt  comet.patch
demo_models/: asolar_tex.xml  ssolar_full.xml
engine/: engine.cpp  engine.h  modelLoader.cpp  modelLoader.h  xmlParser.cpp  xmlParser.h
generator/: generator.cpp  generator.h  patchReader.cpp  patchReader.h  primitives.cpp  primitives.h
models/: bezier_10.3d  bezier_15.3d  box_2_3.3d  cone_1_2_4_3.3d  plane_2_3.3d  sphere_1_10_10.3d  sphere_1_8_8.3d
